--- a/totalhr.data/App.IMPC1003Office.config
+++ b/totalhr.data/App.IMPC1003Office.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
+<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -11,25 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  <connectionStrings xdt:Transform="Replace">
     <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IM-PC10030\SQLEXPRESSPC1003;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <log4net>
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="LogFileAppender" />
-    </root>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-      <param name="File" value="log-file.txt" />
-      <param name="AppendToFile" value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <!--<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />-->
-        <param name="ConversionPattern" value="%date %-5level %logger - [%message%newline]" />
-      </layout>
-    </appender>
-  </log4net>
 </configuration>
