--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Infrastructure\IAuthService.cs" />
     <Compile Include="Infrastructure\IOAuthService.cs" />
     <Compile Include="Models\ClientUser.cs" />
+    <Compile Include="Models\CustomAuthAttribute.cs" />
     <Compile Include="Models\CustomAuthorizeAttribute.cs" />
     <Compile Include="Models\ProfileCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
