--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BOLLAF-DESK\SQLEXPRESSTOBEUS;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IM-PC10030\SQLEXPRESSPC1003;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   <appSettings>
