added automapper support

--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="EnumExtensions.cs" />
     <Compile Include="Models\AdminStruct.cs" />
+    <Compile Include="Models\CalendarEventCache.cs" />
     <Compile Include="Models\CalendarEventInfo.cs" />
     <Compile Include="Models\CalendarEventReminder.cs" />
     <Compile Include="Models\EmailStruct.cs" />
@@ -100,6 +101,7 @@
       <Name>totalhr.Resources</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
