--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Authentication\packages.config" />
+  <repository path="..\CalendarService\packages.config" />
   <repository path="..\Common\packages.config" />
   <repository path="..\totalhr.admin\packages.config" />
   <repository path="..\totalhr.data\packages.config" />
