--- a/totalhr.data/App.config
+++ b/totalhr.data/App.config
@@ -10,7 +10,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIVYA-PC\SQLEXPRESS;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-      </connectionStrings>
+  <connectionStrings><add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIVYA-PC\SQLEXPRESS;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="totalhrTimeRecordingEntities" connectionString="metadata=res://*/EF.TimeRecording.csdl|res://*/EF.TimeRecording.ssdl|res://*/EF.TimeRecording.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIVYA-PC\SQLEXPRESS;initial catalog=totalhr;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
