--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -349,6 +349,7 @@
     </None>
     <None Include="Web.HomeDesktop.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.IMPC1003Office.config">
       <DependentUpon>Web.config</DependentUpon>
