--- a/CompanyDocumentService/CompanyDocumentService.csproj
+++ b/CompanyDocumentService/CompanyDocumentService.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\totalhr.data\totalhr.data.csproj">
+      <Project>{f5a3d97a-a1b9-463a-850e-23cf6e1fc488}</Project>
+      <Name>totalhr.data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\totalhr.Shared\totalhr.Shared.csproj">
       <Project>{1af1abb5-66b8-4e3f-a5aa-12025159514f}</Project>
       <Name>totalhr.Shared</Name>
