changes for company documents

--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -28,7 +28,7 @@
     <add key="SMTPUsername" value="admin@cyberminds.co.uk" />
     <add key="SMTPServerName" value="mail.cyberminds.co.uk" />
     <add key="SMTPPass" value="diVWzXGcuHVsG1kU6xMKaL4kXFLA8hkOUtKPYNioI8Q=" />
-
+    <add key ="MaxFileUploadContent" />
     <add key="LoginDuration" value="30" />
   </appSettings>
   <log4net>
@@ -50,11 +50,12 @@
     </appender>
   </log4net>
   <system.web>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="20480" /><!-- upload limit to 20 MB-->
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
       <forms name="TotalHR" loginUrl="~/Account/Login" timeout="2880" cookieless="UseDeviceProfile" />
     </authentication>
+    
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
