--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Models\CalendarEventCache.cs" />
     <Compile Include="Models\CalendarEventInfo.cs" />
     <Compile Include="Models\CalendarEventReminder.cs" />
+    <Compile Include="Models\DocumentInfo.cs" />
     <Compile Include="Models\EmailStruct.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="HttpCacheHelper.cs" />
